# quartz-command

./: .gitattributes  .gitignore  README.md  package-lock.json
.github/workflows/: package.yml
backend/: .env.example  Cargo.toml  build.rs
backend/migrations/: 0001_init.sql  0002_sub_organizations.sql  0003_device_enrollment.sql  0004_device_allocation.sql  0005_server_settings.sql  0006_device_folders.sql  0007_device_security_telemetry.sql  0008_device_stats.sql  0009_device_stats_memdisk.sql  0010_product_lines.sql  0011_device_traffic.sql
backend/proto/quartzcommand/device/v1/: device.proto
backend/src/: admin_accounts.rs  admin_auth.rs  admin_orgs.rs  audit.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  organizations.rs  product.rs  security.rs  seed.rs  settings.rs  slug.rs
backend/src/admin/: accounts.rs  auth.rs  mod.rs  orgs.rs  settings.rs
backend/src/console/: device_proxy.rs  devices.rs  enroll_tokens.rs  events.rs  mod.rs  organizations.rs  updates.rs
backend/src/gateway/: clone_detect.rs  control.rs  device.rs  enrollment.rs  mod.rs  pb.rs  ratelimit.rs
backend/src/pki/: ca.rs  deviceid.rs  mod.rs
backend/tests/: enrollment.rs
docs/: quartz-sonic-agent-contract-ha-overlay.md  quartz-sonic-agent-contract-l2ops.md  quartz-sonic-agent-contract.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(console)/: layout.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AddDeviceModal.tsx  AddSubOrgUserModal.tsx  AdminShell.tsx  CloudSection.tsx  CloudShell.tsx  FolderFormModal.tsx  LoginForm.tsx  OverviewDashboard.tsx  RealmGuard.tsx  SubOrgFormModal.tsx
frontend/components/configure/: SettingsCard.tsx  SubOrgConfigureNav.tsx
frontend/components/dashboard/: ColumnResize.tsx  ColumnsMenu.tsx  CommitGuard.tsx  DataTable.tsx  MtuCell.tsx  RowActions.tsx  SaveIndicator.tsx
frontend/components/device/: DeviceConfigNav.tsx  FeatureUnavailable.tsx  useConfigureBase.tsx  useDeviceProduct.ts
frontend/components/fleet/: DashboardCards.tsx  FleetCards.tsx  NetworkUsageCard.tsx  TopTalkersCard.tsx  VpnHaCards.tsx  firmware.ts
frontend/components/inventory/: AllocateDeviceModal.tsx  DevicesView.tsx  InventoryNav.tsx  MoveDeviceFolderModal.tsx  SummaryView.tsx  common.tsx
frontend/components/monitor/: AggregateTable.tsx  DeviceMonitorSummary.tsx  GeolocationMap.tsx  LogsAggregate.tsx  MonitorLogs.tsx  MonitorNav.tsx  MonitorOverview.tsx  MonitorPage.tsx  MonitorSummary.tsx  QuartzWatch.tsx  RoutingAggregates.tsx  ServiceCards.tsx  Sparkline.tsx  TrafficFlowAggregate.tsx  TrafficFlowPanel.tsx  TrafficMonitorPanel.tsx  VpnAggregates.tsx
frontend/components/ui/: ChartTooltip.tsx  Segmented.tsx  Tabs.tsx
frontend/components/vpn/: opmode.tsx
frontend/lib/: adminApi.ts  api.ts  authClient.ts
frontend/lib/device/: DashboardContext.tsx  api.ts  appcontrol.ts  bgp-status.ts  bgp.ts  bootSave.ts  content-filtering.ts  fanout.ts  firewall.ts  flows.ts  format.ts  geolocation.ts  guard.ts  ha-fanout.ts  igmp-snooping.ts  interfaces.ts  ips.ts  ipsec.ts  isis-status.ts  isis.ts  l2tp.ts  lldp.ts  mpls-status.ts  mpls.ts  nat.ts  openvpn.ts  ospf-status.ts  ospf.ts  routing-policy.ts  routing.ts  rule-cascade.ts  rule-services.ts  services.ts  sonic-aaa.ts  sonic-acl.ts  sonic-bfd.ts  sonic-bgp.ts  sonic-dhcp-relay.ts  sonic-fdb.ts  sonic-features.ts  (+20 more)
frontend/lib/monitor/: telemetry.ts
scripts/: build-deb.sh  build-rpm.sh  install.sh  stage.sh  sync-version.sh  uninstall.sh  update.sh
(+239 files in other folders)
